Added changes to the home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -21,8 +21,14 @@
                   </ul>
                 </div>
               </nav>
-
-              <img src="/images/child.jpg" alt="Mountain View">    
+        <div class="row">        
+              <div class="col-sm-6"><img src="/images/child.jpg" alt="Mountain View"> </div>
+              <div class="col-sm-6"><p> <h2> <strong>Monitoring your Children </strong> <br>
+                Are you sure that your children are safe where ever they go? If you want to monitor your children, then Children Monitoring System is all that you want!!!
+              It is important to monitor your children in order to be aware of where they go and their safety.
+            Our website allows you to remotely monitor children and their location. 
+          Our website helps parents to protect their children online. </h2> </p></div>
+        </div>      
 
 </body>
 
