--- a/signup.ejs
+++ b/signup.ejs
@@ -2,11 +2,6 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    
-    
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" ></script>
-    <script type="text/javascript" src="/js/main.js"></script>
         
     <title>Login</title>
     <link rel="stylesheet" href="/css/login.css">
@@ -16,7 +11,7 @@
     <h1 align="middle"> Child Monitoring System </h1><br>
     <div class="login">
         <input type="text" placeholder="Email ID" id="username">
-        <input type="password" placeholder="password" id="password">
+        <input type="password" placeholder="pasword" id="password">
         <input type="text" placeholder="Renter Password" id="username">
         <input href="file:///C:/GDP1/SignupPage.html" type="submit" value="Sign Up">
     </div>
