--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Children Tracking</title>
+    <title>Children Tracking System</title>
 </head>
 
 <body>
@@ -21,14 +21,6 @@
                   </ul>
                 </div>
               </nav>
-        <div class="row">        
-              <div class="col-sm-6"><img src="/images/child.jpg" alt="Mountain View"> </div>
-              <div class="col-sm-6"><p> <h2> <strong>Monitoring your Children </strong> <br>
-                Are you sure that your children are safe where ever they go? If you want to monitor your children, then Children Monitoring System is all that you want!!!
-              It is important to monitor your children in order to be aware of where they go and their safety.
-            Our website allows you to remotely monitor children and their location. 
-          Our website helps parents to protect their children online. </h2> </p></div>
-        </div>      
 
 </body>
 
