--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,18 +2,76 @@
 <html lang="en">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" ></script>
+    <script type="text/javascript" src="/js/main.js"></script>
         
-    <title>Login</title>
+    <title>signup</title>
     <link rel="stylesheet" href="/css/login.css">
-</head>
+    <style>
+div.container {
+    width: 100%;
+    border: 1px solid gray;
+}
 
+header, footer {
+    padding: 1em;
+    color: white;
+    background-color: black;
+    clear: left;
+    text-align: center;
+}
+
+nav {
+    float: left;
+    max-width: 160px;
+    margin: 0;
+    padding: 1em;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+   
+nav ul a {
+    text-decoration: none;
+}
+
+article {
+    margin-left: 170px;
+    border-left: 1px solid gray;
+    padding: 1em;
+    overflow: hidden;
+}
+</style>
+</head>
+ <header>
+   <h1>Children Monitoring System</h1>
+</header>
+  
+ <ul class="nav navbar-nav navbar-right">
+                    <li><a href="/"><span class="glyphicon glyphicon-user"></span> Home</a></li>
+                    <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+  </ul>
 <body>
-    <h1 align="middle"> Child Monitoring System </h1><br>
+    
+
+    
     <div class="login">
         <input type="text" placeholder="Email ID" id="username">
         <input type="password" placeholder="password" id="password">
         <input type="text" placeholder="Renter Password" id="username">
         <input href="file:///C:/GDP1/SignupPage.html" type="submit" value="Sign Up">
+  
+
+      
     </div>
 </body>
+<br><br><br><br><br><br><br><br>
+<footer>Copyright &copy; cmswebteam.com</footer>
 </html>
