--- a/home.ejs
+++ b/home.ejs
@@ -87,13 +87,16 @@ article {
   CMS is a web application that provides parents an option to look at their children location. 
   Through this parents can add the details of their children and track thier travelling locations and also the travel history
   Here you will be having signup and login options.
-  If you are already a logged in user then you can enter your credentails to login in.</p>
+  If you are already a logged in user then you can enter your credentails to login.</p>
+
   <img src="images.jpg" width="670px" height="335px">
+  
 </div>
 
 
 
 </div>
+<img src="children.jpg" width ="300px" height="300px">
 
 </body>
 <br><br><br><br><br><br><br><br>
