Files added to view

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
 <style>
 div.container {
     width: 100%;
-    border: 1px solid gray;
+    /* border: 1px solid gray; */
 }
 
 header, footer {
@@ -81,14 +81,22 @@ article {
   </ul>
 
 
-  <h1>Children Monitoring System</h1>
-  <p>CMS is a web application that provides parents an option to look at their children location. Through this parents can add the details of their children and track thier travelling locations and also the travel history</p>
-  <p>Here you will be having signup and login options. If you are already a logged in user then you can enter your credentails to login in</p>
+  <h1 align:centre>Children Monitoring System</h1>
+  <div>
+  <p class="col-sm-8" style="text-align:center">
+  CMS is a web application that provides parents an option to look at their children location. 
+  Through this parents can add the details of their children and track thier travelling locations and also the travel history
+  Here you will be having signup and login options..
+  If you are already a logged in user then you can enter your credentails to login.</p>
 
+  <img src="images.jpg" width="670px" height="335px">
+  
+</div>
 
 
 
 </div>
+<img src="children.jpg" width ="300px" height="300px">
 
 </body>
 <br><br><br><br><br><br><br><br>
