--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,206 +1,86 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" ></script>
-    <script type="text/javascript" src="/js/main.js"></script>
-        
-    <title>signup</title>
-    <link rel="stylesheet" href="/css/login.css">
-    <style>
-div.container {
-    width: 100%;
-    border: 1px solid gray;
-}
-
-header, footer {
-    padding: 1em;
-    color: white;
-    background-color: black;
-    clear: left;
-    text-align: center;
-}
-
-nav {
-    float: left;
-    max-width: 160px;
-    margin: 0;
-    padding: 1em;
-}
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-   
-nav ul a {
-    text-decoration: none;
-}
-
-article {
-    margin-left: 170px;
-    border-left: 1px solid gray;
-    padding: 1em;
-    overflow: hidden;
-}
-h1.nice {
-    font-family: 'Lobster', cursive;
-}
-body {
-  	background-color: #ffffff;
-  	font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color: #555;
-
-    -webkit-font-smoothing: antialiased;
-    -webkit-overflow-scrolling: touch;
-}
-input[type='number'] {
-    -moz-appearance:textfield;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    display: none;
-    -webkit-appearance: none;
-    margin: 0;
-}
-</style>
-</head>
- <header>
-   <h1>Children Monitoring System</h1>
-</header>
-  
- <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/"><span class="glyphicon glyphicon-user"></span> Home</a></li>
-                    <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-  </ul>
-<body>
-    
-
-    
-        <div class="container">
-            <div class="text-center">
-                <h1 class="nice">Registration Form</h1>
+<% include ../partials/header %>
+  <div class="container">
+        <div class="text-center">
+            <h1 class="nice">Registration Form</h1>
+        </div>
+        <form class="form-horizontal" action="/register" method="post" >
+            <!-- firstname input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Firstname</label>        
+                <div class="col-md-4">
+                    <input id="phone" name="phone" type="number" placeholder="Firstname" class="form-control input-md" required>
+                    <span class="help-block">Please enter your Firstname</span>
+                </div>
             </div>
-            <form class="form-horizontal" method="post"
-                  action="#">
-                <!-- firstname input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Firstname</label>        
-                    <div class="col-md-4">
-                        <input id="phone" name="phone" type="number" placeholder="Firstname"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please enter your Firstname</span>
-                    </div>
-                </div>
         
-                 <!-- lastname input-->
-                 <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Lastname</label>        
-                    <div class="col-md-4">
-                        <input id="phone" name="phone" type="number" placeholder="Lastname"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please enter your Lastname</span>
-                    </div>
+            <!-- lastname input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Lastname</label>        
+                <div class="col-md-4">
+                    <input id="phone" name="phone" type="number" placeholder="Lastname" class="form-control input-md" required>
+                    <span class="help-block">Please enter your Lastname</span>
                 </div>
+            </div>
                 
-                <!-- user name-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">User name</label>        
-                    <div class="col-md-4">
-                        <input id="phone" name="phone" type="number" placeholder="username"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please enter your Username</span>
-                    </div>
+            <!-- user name-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">User name</label>        
+                <div class="col-md-4">
+                    <input id="phone" name="phone" type="number" placeholder="username" class="form-control input-md" required>
+                    <span class="help-block">Please enter your Username</span>
                 </div>
-        
+            </div>        
                 
-                <!-- Gender Input -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="checkboxes">Gender</label>
-        
-                    <div class="col-md-4">
-                        <div class="checkbox">
-                            <label>
-                                <input name="genderboxes" id="genderboxes-0" value="1" type="radio">
+            <!-- Gender Input -->
+            <div class="form-group">
+              <label class="col-md-4 control-label" for="checkboxes">Gender</label>        
+              <div class="col-md-4">
+                    <div class="checkbox">
+                        <label>
+                            <input name="genderboxes" id="genderboxes-0" value="1" type="radio">
                                 Male
-                            </label>
-                        </div>
-                        <div class="checkbox">
-                            <label>
-                                <input name="genderboxes" id="genderboxes-1" value="2" type="radio">
-                                Female
-                            </label>
-                        </div>
-                        <span class="help-block">Please select your Gender</span>
-        
+                        </label>
                     </div>
-                </div>
-                <!-- Email input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Email</label>
-        
-                    <div class="col-md-4">
-                        <input id="email" name="email" type="email" placeholder="Email"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please type in your email</span>
+                    <div class="checkbox">
+                        <label>
+                            <input name="genderboxes" id="genderboxes-1" value="2" type="radio">
+                            Female
+                        </label>
                     </div>
+                    <span class="help-block">Please select your Gender</span>
+              </div>
+            </div>
+            <!-- Email input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Email</label>
+                <div class="col-md-4">
+                    <input id="email" name="email" type="email" placeholder="Email" class="form-control input-md" required>
+                    <span class="help-block">Please type in your email</span>
                 </div>
-                <!-- address input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Address</label>        
-                    <div class="col-md-4">
-                        <input id="phone" name="phone" type="number" placeholder="Address"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please enter your Address</span>
-                    </div>
+            </div>
+            <!-- address input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Address</label>        
+                <div class="col-md-4">
+                    <input id="phone" name="phone" type="number" placeholder="Address" class="form-control input-md" required>
+                    <span class="help-block">Please enter your Address</span>
                 </div>
-                <!-- Phone input-->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="password">Phone</label>        
-                    <div class="col-md-4">
-                        <input id="phone" name="phone" type="number" placeholder="Phone number"
-                               class="form-control input-md" required="">
-                        <span class="help-block">Please provide your Mobile Number</span>
-                    </div>
+            </div>
+            <!-- Phone input-->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="password">Phone</label>        
+                <div class="col-md-4">
+                    <input id="phone" name="phone" type="number" placeholder="Phone number" class="form-control input-md" required>
+                    <span class="help-block">Please provide your Mobile Number</span>
                 </div>
-                <!-- Button (Double) -->
-                <div class="form-group">
-                    <label class="col-md-4 control-label" for="button1id"></label>        
-                    <div class="col-md-8">
-                        <button type="submit" class="btn btn-info">Register</button>
-                                            </div>
+            </div>
+            <!-- Button (Double) -->
+            <div class="form-group">
+                <label class="col-md-4 control-label" for="button1id"></label>        
+                <div class="col-md-8">
+                    <button type="submit" class="btn btn-info">Register</button>
                 </div>
-            </form>
-        </div>     
-        
-        <script>
-        $(document).ready(function () {
-        $('#memployboxes-1').change(function () {
-            $('#motherdiv').fadeIn();
-        });
-        $('#memployboxes-0').change(function () {
-            $('#motherdiv').fadeOut();
-        });
-        $('#femployboxes-1').change(function () {
-            $('#fatherdiv').fadeIn();
-        });
-        $('#femployboxes-0').change(function () {
-            $('#fatherdiv').fadeOut();
-        });
-
-    });
-        
-        </script>
-        <!-- <input href="file:///C:/GDP1/SignupPage.html" type="submit" value="Sign Up"> -->
-</body>
-<br><br><br><br><br><br><br><br>
-<footer>Copyright &copy; cmswebteam.com</footer>
-</html>
+            </div>
+        </form>
+    </div> 
+<% include ../partials/footer %>    
