--- a/views/user.ejs
+++ b/views/user.ejs
@@ -1,18 +1,3 @@
-<html>
-
-<head>
-    <meta charset="utf-8">
-    <title>User</title>
-    <link rel="stylesheet" href="/css/user.css">
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" ></script>
-    <script type="text/javascript" src="/js/main.js"></script>
-</head>
-
-
-
-<body>
-    <h1 align="middle"> Child Monitoring System </h1><br>
-    
-</body>
-
-</html>
+ <% include ../partials/header %>
+ 	<h1> Child Monitoring System </h1><br>
+ <% include ../partials/header %>
