first working code

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,10 +1,6 @@
 <% include ./partials/header %>
+<% include ./partials/navBar %>
 <div class="container">
-  <header>
-     <h1>Children Monitoring System</h1>
-  </header>
-
-  <h1 align:centre>Children Monitoring System</h1>
   <div>
     <p class="col-sm-8" style="text-align:center">
       CMS is a web application that provides parents an option to look at their children location. 
