--- a/views/partials/navBar.ejs
+++ b/views/partials/navBar.ejs
@@ -1,9 +1,13 @@
-<div class="navbar navbar-default">
-	<div class="container-fluid">  
-	   <ul class="nav navbar-nav navbar-right">
-	      <li><a href="/"><span class="glyphicon glyphicon-user"></span> Home</a></li>
-	      <li><a href="/register"><span class="glyphicon glyphicon-log-in"></span> signup</a></li>
-	      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-	   </ul>
-	</div>
 <body>
+	<div class="navbar navbar-default">
+		<div class="container-fluid">  
+		   <ul class="nav navbar-nav navbar-right">
+		      <li><a href="/"><span class="glyphicon glyphicon-user"></span> Home</a></li>
+		      <li><a href="/register"><span class="glyphicon glyphicon-log-in"></span> signup</a></li>
+		      <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+		   </ul>
+		</div>
+	</div>
+	<header>
+		<h1>Children Monitoring System</h1>
+	</header>
