--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,5 @@
 <% include ./partials/header %>
+<% include ./partials/navBar %>
   <div class="container">
         <div class="text-center">
             <h1 class="nice">Registration Form</h1>
